--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sequelize-cli": "^6.5.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
