--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.25.2"
+    "sequelize": "^6.25.2",
+    "swagger-ui-express": "^4.5.0"
   }
 }
