--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "wallet-api",
   "version": "1.0.0",
   "description": "Wallet API",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "test"
   },
   "keywords": [
@@ -14,7 +14,7 @@
     "rest",
     "api"
   ],
-  "author": "Lucas Carnero <l.carnero@lucascarnero.com.ar>",
+  "author": "Alkemy",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.20",
