--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Alkemy",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.26.0",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.1"
   },
