--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.26.0",
-    "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.5.1"
+    "nodemon": "^2.0.20" 
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -29,6 +28,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.2",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "sequelize-cli": "^6.5.1"
   }
 }
