--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.26.0",
-    "nodemon": "^2.0.20" 
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "pm2": "^5.2.2",
     "sequelize": "^6.25.2",
-    "swagger-ui-express": "^4.5.0",
-    "sequelize-cli": "^6.5.1"
+    "sequelize-cli": "^6.5.1",
+    "swagger-ui-express": "^4.5.0"
   }
 }
